--- a/recipes/cornbread.html
+++ b/recipes/cornbread.html
@@ -6,6 +6,29 @@
 </head>
 <body>
     <h1>Cornbread</h1>
-    <img src="images/cornbread.jpg" alt="Cornbread">
+    <img src="images/cornbread.jpg" alt="Cornbread"
+    width="400"
+    height="500"/>
+    <h3> Description:</h3>
+    <p> If you're looking for something to bring over during the holidays, look no futher! Cornbread is the perfect option for events like thanksgiving or christmas! This simple recipe will take no longer than 25 minutes.</p>
+    <h3> Ingredients:</h3>
+    <ul>
+        <li>1 cup all purpose flour</li>
+        <li>1 cup yellow cornmeal</li>
+        <li>2/3 cup granulated sugar</li>
+        <li>1 teaspoon salt</li>
+        <li>3 1/2 teaspoons baking powder</li>
+        <li>1/3 cup butter</li>
+        <li>1 large egg</li>
+        <li>1 cup milk</li>
+    </ul>
+    <h3>Instructions:</h3>
+    <ol>
+        <li>Preheat oven to 400 degrees and grease your pan.</li>
+        <li>Mix all the dry ingredients first.</li>
+        <li>Add the butter, milk, and egg; stir until few lumps are remaining.</li>
+        <li>Spread the batter into the pan evenly and bake for 20 to 25 minutes. </li>
+        <li>Serve hot!</li>
+    </ol>
 </body>
 </html>
