--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <h1> Powdered Sugar Crepes </h1>
-    <img src="images/crepes.jpg" alt="sugar crepes">
+    <img src="images/crepes.jpg" alt="sugar crepes"
+    width="400"
+    height="500"/>
     <h3>Description:</h3>
     <p>From France to your kitchen! This recipe will be easy for even those who shy away from the kitchen! </p>
     <h3>Ingredients:</h3>
